extra space fixed

--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ body {
     width: 80%;
     max-width: 700px ;
     border-radius: 36px;
-    padding-top: 500px;
 }
 /* Contact Section */
 .contact {
